--- a/src/web/style/text.css
+++ b/src/web/style/text.css
@@ -21,6 +21,7 @@ h3 {
     font-weight: 800;
     text-align: center;
     text-shadow: 2px 2px black;
+    font-size: 1.1em;
 }
 
 h4 {
